# wagic

./: .gitignore  .travis.yml  CMakeLists.txt  travis-script.sh
CMakeModules/: FindAnt.cmake  FindOrBuild.cmake  FindPSPSDK.cmake  FindSDL2.cmake  PSPToolchain.cmake  psp.toolchain.cmake  utils.cmake
JGE/: CMakeLists.txt  JGE.vcxproj.filters  Makefile
JGE/include/: JFileSystem.h  JSoundSystem.h  JTypes.h  PrecompiledHeader.h  decoder_prx.h
JGE/include/hge/: hgecolor.h  hgedistort.h
JGE/include/qt/: corewrapper.h
JGE/src/: JAnimator.cpp  JGE.cpp  JMP3.cpp  JNetwork.cpp  JParticleEffect.cpp  JResourceManager.cpp  JSpline.cpp  OutputCapturer.cpp  decoder_prx.cpp  vram.cpp
JGE/src/hge/: hgecolor.cpp  hgedistort.cpp
JGE/src/pc/: JSfx.cpp
projects/mtg/: CMakeLists.txt  Makefile  wagic-qt.pro
projects/mtg/include/: AllAbilities.h  CardGui.h  DeckMenu.h  GameApp.h  GuiMana.h  MTGAbility.h  MenuItem.h  SimpleMenu.h  SimplePad.h  StoryFlow.h  WCachedResource.h  WFont.h
projects/mtg/src/: GameStateShop.cpp  MTGPack.cpp  ModRules.cpp  SDL_android_main.cpp  SDLmain.cpp  StyleManager.cpp  WCachedResource.cpp  WGui.cpp
